@startuml

class Instructor
class Textbook
class Course

Course "1" o-- "many" Instructor : has >
Course "1" o-- "many" Textbook : has >

class Instructor {
    - firstName : String
    - lastName : String
    - officeNumber : String

    + getFirstName() : String
    + setFirstName(String firstName) : void
    + getLastName() : String
    + setLastName(String lastName) : void
    + getOfficeNumber() : String
    + setOfficeNumber(String officeNumber) : void
    + toString() : String
}

class Textbook {
    - title : String
    - author : String
    - publisher : String

    + getTitle() : String
    + setTitle(String title) : void
    + getAuthor() : String
    + setAuthor(String author) : void
    + getPublisher() : String
    + setPublisher(String publisher) : void
    + toString() : String
}

class Course {
    - name : String
    - instructors : ArrayList<Instructor>
    - textbooks : ArrayList<Textbook>

    + getName() : String
    + setName(String name) : void
    + getInstructors() : ArrayList<Instructor>
    + setInstructor(Instructor instructor) : void
    + getTextbooks() : ArrayList<Textbook>
    + setTextbook(Textbook textbook) : void
    + toString() : String
    + printCourse() : void
}


@enduml
